package org.example.prototypepaymentsystem.controller;

public class PaymentController {
}
