package org.example.prototypepaymentsystem.service;

public class PaymentService {
}
